# sigma_backend

./: .gitignore  manage.py  pyproject.toml  requirements.txt
contact/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
contact/migrations/: 0001_initial.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_course.py  0003_site_google_maps.py  0004_site_header_image_site_header_title.py
sigmabackend/: asgi.py  settings.py  urls.py  wsgi.py
